# IFC-cambricon-llm

./: .gitignore  AUTHORS.md  CITATION.cff  Makefile  README.md  pyproject.toml
configs/: default_models.csv  default_platforms.csv  default_references.csv  default_system.csv  example_models_mixed.csv  example_scaled_platforms.csv  example_system_fast_npu.csv
data/: cambricon_fig9_profiles.json  references.bib
docs/: configuration.md  controller_cycle_model.md  github_release.md  implementation.md  latency_model.md  method.md  operator_trace.md  paper_comparison.md  references.md  release_summary.md  reproduction_checklist.md  results.md  simulator_reliability.md  simulator_stack.md  ssdsim_ifc_backend.md
include/: ifc_cambricon_llm.h
results/: ablation_summary.csv  context_length_inference.csv  controller_schedule.csv  controller_timing_summary.csv  cycle_controller_stats.csv  cycle_controller_trace.csv  cycle_weight_timing.csv  figure12_read_slice_ablation.csv  figure14_tiling_ablation.csv  figure9_reproduction.csv  hw_cycle_compare.csv  hw_cycle_stats.csv  latency_breakdown.csv  model_summary.csv  npu_timing.csv  operator_trace.csv  operator_trace_summary.csv  platform_summary.csv  report.md  reproduction_checks.csv  request_trace.csv  simulator_scheme_comparison.csv  ssdsim_ifc_event_stats.csv  ssdsim_ifc_event_trace.csv  ssdsim_ifc_stats.csv  ssdsim_ifc_trace.csv  summary.json  system_profile.csv  systemc_component.vcd  systemc_component_compare.csv  systemc_component_modules.csv  systemc_component_stats.csv  systemc_component_trace.csv  tile_profile.csv  (+2 more)
(+21 files in other folders)
