[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ifc-cambricon-llm"
version = "0.1.0"
description = "Standalone Cambricon-LLM style in-flash-computing decode-speed simulator."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "IFC Cambricon-LLM contributors" }]
dependencies = []

[project.scripts]
ifc-cambricon-llm = "ifc_cambricon_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ifc_cambricon_llm = []

